--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 19 Jan. 2023 -->
+<!-- 05 Feb. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -49,33 +49,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org016406b">
+<figure id="org8806755">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-orge44145e" class="outline-2">
-<h2 id="orge44145e">Introduction</h2>
-<div class="outline-text-2" id="text-orge44145e">
+<section id="outline-container-orgad5cdcf" class="outline-2">
+<h2 id="orgad5cdcf">Introduction</h2>
+<div class="outline-text-2" id="text-orgad5cdcf">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org7273632" class="outline-2">
-<h2 id="org7273632">Implementation</h2>
-<div class="outline-text-2" id="text-org7273632">
+<section id="outline-container-org6d5a672" class="outline-2">
+<h2 id="org6d5a672">Implementation</h2>
+<div class="outline-text-2" id="text-org6d5a672">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orge8639af" class="outline-2">
-<h2 id="orge8639af">Usage</h2>
-<div class="outline-text-2" id="text-orge8639af">
+<section id="outline-container-org847aede" class="outline-2">
+<h2 id="org847aede">Usage</h2>
+<div class="outline-text-2" id="text-org847aede">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -86,7 +86,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="orgcf7a6c4">
+<pre class="example" id="org5f3168c">
 $ make
 </pre>
 
@@ -95,9 +95,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org753dd84" class="outline-3">
-<h3 id="org753dd84">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org753dd84">
+<div id="outline-container-orga4cd673" class="outline-3">
+<h3 id="orga4cd673">RSS Feeds</h3>
+<div class="outline-text-3" id="text-orga4cd673">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -154,13 +154,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orgd9961ff" class="outline-2">
-<h2 id="orgd9961ff">Features</h2>
-<div class="outline-text-2" id="text-orgd9961ff">
+<section id="outline-container-orgbbd2075" class="outline-2">
+<h2 id="orgbbd2075">Features</h2>
+<div class="outline-text-2" id="text-orgbbd2075">
 </div>
-<div id="outline-container-org2182dfd" class="outline-4">
-<h4 id="org2182dfd">Redirection</h4>
-<div class="outline-text-4" id="text-org2182dfd">
+<div id="outline-container-orga1307c7" class="outline-4">
+<h4 id="orga1307c7">Redirection</h4>
+<div class="outline-text-4" id="text-orga1307c7">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -173,9 +173,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgf19a37d" class="outline-3">
-<h3 id="orgf19a37d">Drafts</h3>
-<div class="outline-text-3" id="text-orgf19a37d">
+<div id="outline-container-org4ab921f" class="outline-3">
+<h3 id="org4ab921f">Drafts</h3>
+<div class="outline-text-3" id="text-org4ab921f">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -192,9 +192,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgef201da" class="outline-2">
-<h2 id="orgef201da">License</h2>
-<div class="outline-text-2" id="text-orgef201da">
+<section id="outline-container-org6022945" class="outline-2">
+<h2 id="org6022945">License</h2>
+<div class="outline-text-2" id="text-org6022945">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -208,7 +208,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 19 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 05 Feb. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
