--- a/setup.html
+++ b/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 19 Jan. 2023 -->
+<!-- 05 Feb. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My personal setup</title>
@@ -49,9 +49,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-org7d95e6c" class="outline-2">
-<h2 id="org7d95e6c">General setup</h2>
-<div class="outline-text-2" id="text-org7d95e6c">
+<section id="outline-container-org8ab7566" class="outline-2">
+<h2 id="org8ab7566">General setup</h2>
+<div class="outline-text-2" id="text-org8ab7566">
 <p>
 I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
@@ -101,9 +101,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgfc02199" class="outline-2">
-<h2 id="orgfc02199">Work</h2>
-<div class="outline-text-2" id="text-orgfc02199">
+<section id="outline-container-org46a458b" class="outline-2">
+<h2 id="org46a458b">Work</h2>
+<div class="outline-text-2" id="text-org46a458b">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -120,9 +120,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-org2279978" class="outline-4">
-<h4 id="org2279978">Other</h4>
-<div class="outline-text-4" id="text-org2279978">
+<div id="outline-container-org91e8a47" class="outline-4">
+<h4 id="org91e8a47">Other</h4>
+<div class="outline-text-4" id="text-org91e8a47">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-orged641df" class="outline-2">
-<h2 id="orged641df">Development environment</h2>
-<div class="outline-text-2" id="text-orged641df">
+<section id="outline-container-org9b4c677" class="outline-2">
+<h2 id="org9b4c677">Development environment</h2>
+<div class="outline-text-2" id="text-org9b4c677">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -146,27 +146,27 @@ This setup is kept in an internal dotfiles repository.
 </ul>
 </div>
 
-<div id="outline-container-orgd429af2" class="outline-4">
-<h4 id="orgd429af2">C++</h4>
-<div class="outline-text-4" id="text-orgd429af2">
+<div id="outline-container-org5c160b2" class="outline-4">
+<h4 id="org5c160b2">C++</h4>
+<div class="outline-text-4" id="text-org5c160b2">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc3b5360" class="outline-4">
-<h4 id="orgc3b5360">Ruby</h4>
-<div class="outline-text-4" id="text-orgc3b5360">
+<div id="outline-container-orgff79c4e" class="outline-4">
+<h4 id="orgff79c4e">Ruby</h4>
+<div class="outline-text-4" id="text-orgff79c4e">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org9bbb31d" class="outline-4">
-<h4 id="org9bbb31d">Golang</h4>
-<div class="outline-text-4" id="text-org9bbb31d">
+<div id="outline-container-org5049039" class="outline-4">
+<h4 id="org5049039">Golang</h4>
+<div class="outline-text-4" id="text-org5049039">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
@@ -178,7 +178,7 @@ This setup is kept in an internal dotfiles repository.
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 19 Jan. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 05 Feb. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
