--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 05 Feb. 2023 -->
+<!-- 06 Jul. 2023 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My music setup</title>
@@ -19,7 +19,6 @@
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
 <link rel="stylesheet" href="css/site.css?v=d06246555179cc693994c6cd6cd74faed6bc08c754a9ae99c23e96ba131806e7" type="text/css">
 </head>
 <body>
@@ -77,13 +76,10 @@ My live setup is:
 </p>
 
 <ul class="org-ul">
-<li><a href="https://www.gibson.com/Guitar/USAYNB363/Les-Paul-Studio">2014 LP Studio guitar</a></li>
-<li><a href="https://www.fractalaudio.com/ax8-amp-modeler-multi-effects">Fractal Audio AX8</a> as amp modeler and effects
-<ul class="org-ul">
-<li>I run <a href="https://www.fractalaudio.com/ax8-edit">AX-8 Edit</a> on Linux using <a href="https://www.winehq.org">WINE</a></li>
-</ul></li>
-<li><a href="https://missionengineering.com/shop-2/products/expression/multi-use-exp/sp-1/">Mission Engineering SP-1</a> expression pedal</li>
-<li><a href="http://www.xviveaudio.com/u2-p0056.html">Xvive</a> guitar wireless system</li>
+<li><del><a href="https://www.gibson.com/Guitar/USAYNB363/Les-Paul-Studio">2014 LP Studio guitar</a></del> <a href="https://www.fender.com/en-US/electric-guitars/telecaster/american-performer-telecaster/0115110342.html">Fender American Performer Telecaster</a></li>
+<li><del><a href="https://www.fractalaudio.com/ax8-amp-modeler-multi-effects">Fractal Audio AX8</a></del> <a href="https://line6.com/hx-stomp-xl/">HX Stomp XL</a> as amp modeler and effects</li>
+<li><del><a href="https://missionengineering.com/shop-2/products/expression/multi-use-exp/sp-1/">Mission Engineering SP-1</a> expression pedal</del></li>
+<li><del><a href="http://www.xviveaudio.com/u2-p0056.html">Xvive</a> guitar wireless system</del></li>
 <li><a href="https://www.shure.com/products/earphones/se215cl">Shure SE-215CL</a> in-ear monitors</li>
 <li><a href="https://www.thomann.de/de/the_t.bone_iem_75.htm">t.bone IEM 75</a> wireless solution</li>
 </ul>
@@ -91,7 +87,7 @@ My live setup is:
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 05 Feb. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 06 Jul. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
